[tool.poetry]
name = "leetcode-make-tests"
version = "0.1.0"
description = ""
authors = ["Andrei Moiseenko <moiseenko.cy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
